minimap: Fix content box x scrollbar on certain views.

--- a/src/modules/minimap/ui/style.less
+++ b/src/modules/minimap/ui/style.less
@@ -26,41 +26,55 @@
         width: 100%;
     }
 
-    .content-wrap .list-scroll {
-        bottom: 1px;
-        top: 44px;
-        position: absolute;
-        right: 1px;
-        left: 1px;
-        padding: 1px
-    }
+    .win-main {
+        .content-wrap .list-scroll {
+            bottom: 1px;
+            top: 44px;
+            position: absolute;
+            right: 1px;
+            left: 1px;
+            padding: 1px
+        }
 
-    .jssb-y {
-        left: 691px;
-        right: 2px;
-        top: 169px;
-        bottom: 158px;
-        position: fixed
-    }
+        .jssb-y {
+            left: 691px;
+            right: 2px;
+            top: 169px;
+            bottom: 90px;
+            position: fixed
+        }
 
-    .win-main .scrollbar {
-        position: absolute;
-        bottom: 0;
-        top: 0;
-        width: 100%;
-    }
+        .footer .jssb-y {
+            bottom: 158px;
+        }
+        
+        .scrollbar {
+            position: absolute;
+            bottom: 0;
+            top: 0;
+            width: 100%;
+        }
 
-    .win-main .box-outer {
-        padding: 0;
-        position: absolute;
-        top: 9px;
-        bottom: 3px;
-        left: 9px;
-        right: 9px;
-        overflow: hidden;
-    }
+        .box-paper {
+            &.footer .box-outer {
+                margin-bottom: 106px;
+            }
 
-    .win-main .box-outer .box-padding {
-        padding: 4px
+            .box-outer {
+                padding: 0;
+                position: absolute;
+                top: 9px;
+                bottom: 3px;
+                left: 9px;
+                right: 9px;
+                overflow: hidden;
+                margin-bottom: 40px;
+                
+                .box-padding {
+                    padding: 4px
+                }
+            }
+        }
+
     }
 }
